--- a/res/layout/activity_my_menu.xml
+++ b/res/layout/activity_my_menu.xml
@@ -34,4 +34,14 @@
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true" />
 
+    <Button
+        android:id="@+id/button1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/timePicker1"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="52dp"
+        android:layout_marginLeft="17dp"
+        android:text="Show myListView" />
+
 </RelativeLayout>
