--- a/res/layout/activity_my_menu.xml
+++ b/res/layout/activity_my_menu.xml
@@ -9,7 +9,7 @@
     tools:context=".MyMenu" >
 
     <TextView
-        android:id="@+id/textView1"
+        android:id="@+id/Date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/hello_world" />
@@ -18,8 +18,8 @@
         android:id="@+id/editText1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textView1"
-        android:layout_below="@+id/textView1"
+        android:layout_alignLeft="@+id/Date"
+        android:layout_below="@+id/Date"
         android:layout_marginLeft="26dp"
         android:layout_marginTop="32dp"
         android:ems="10" >
