New Map Picture

--- a/res/layout/fragment_page_one.xml
+++ b/res/layout/fragment_page_one.xml
@@ -39,7 +39,7 @@
             android:id="@+id/Map"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/pic1" />
+            android:src="@drawable/standort" />
         
     </LinearLayout>
 
