--- a/res/layout/fragment_page_one.xml
+++ b/res/layout/fragment_page_one.xml
@@ -24,6 +24,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
+            android:layout_marginTop="2dp"
             android:layout_weight=".50"
             android:text="Öffnungszeiten: \n Mo: 13:15-13:45 \n Do: 15:30-16:00"
             android:textAppearance="?android:attr/textAppearanceSmall" />
@@ -32,8 +33,9 @@
 
     <View
         android:layout_width="fill_parent"
-        android:layout_height="1dp" 
-        android:background="#000000"/>
+        android:layout_height="1dp"
+        android:layout_margin="2dp"
+        android:background="#000000" />
     
     <LinearLayout
         android:layout_width="match_parent"
@@ -54,7 +56,7 @@
                 android:textAppearance="?android:attr/textAppearanceMedium" />
 
             <TextView
-                android:id="@+id/NewsHead"
+                android:id="@+id/NewsContent"
                 android:layout_width="fill_parent"
                 android:layout_height="52dp"
                 android:layout_margin="5dp"
@@ -68,14 +70,30 @@
             android:layout_width="fill_parent"
             android:layout_height="1dp"
             android:background="#000000" />
-
+        
+		<TextView
+                android:id="@+id/MapTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="Standort des Skriptenverkaufs"
+                android:textAppearance="?android:attr/textAppearanceSmall" />
+		
         <ImageView
             android:id="@+id/Map"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="230dp"
+            android:layout_height="230dp"
             android:layout_gravity="center"
             android:layout_margin="5dp"
             android:src="@drawable/standort" />
+
+        <Button
+            android:id="@+id/ContactMail"
+            android:layout_width="wrap_content"
+            android:layout_height="32dp"
+            android:layout_gravity="center"
+            android:text="skr-anfrage@fs.ei.tum.de"
+            android:textAppearance="?android:attr/textAppearanceSmallInverse" />
 
     </LinearLayout>
 
