--- a/res/layout/activity_my_menu.xml
+++ b/res/layout/activity_my_menu.xml
@@ -45,5 +45,14 @@
         android:layout_below="@+id/button1"
         android:layout_marginTop="44dp"
         android:text="Alternatives App-Layout" />
+    
+    <Button
+        android:id="@+id/RSSButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/button1"
+        android:layout_below="@+id/button2"
+        android:layout_marginTop="44dp"
+        android:text="RSS_Beispiel" />
 
 </RelativeLayout>
