--- a/res/layout/fragment_page_three.xml
+++ b/res/layout/fragment_page_three.xml
@@ -1,26 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent" >
+    android:layout_height="fill_parent" 
+    >
 
     <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        
+        android:layout_height="90dp"
         android:orientation="vertical" >
 
         <TextView
             android:id="@+id/Name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            
             android:text="Medium Text"
-            android:textAppearance="?android:attr/textAppearanceMedium" />
+            android:textAppearance="?android:attr/textAppearanceMedium" 
+            android:padding="10dp"/>
 
         <TextView
             android:id="@+id/Price"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            
             android:text="Small Text"
-            android:textAppearance="?android:attr/textAppearanceSmall" />
+            android:textAppearance="?android:attr/textAppearanceSmall" 
+            android:padding="10dp"/>
 
     </LinearLayout>
 
@@ -28,6 +34,9 @@
         android:id="@+id/checkBox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:gravity="right"
+        
+        android:padding="10dp"
          />
 
 </LinearLayout>
