--- a/res/layout/fragment_page_three.xml
+++ b/res/layout/fragment_page_three.xml
@@ -1,32 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/tableRow1"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent" 
-    >
+    android:layout_height="fill_parent" >
 
     <LinearLayout
         android:layout_width="wrap_content"
-        
-        android:layout_height="90dp"
-        android:orientation="vertical" >
+        android:layout_height="wrap_content"
+        android:layout_weight="0.99" >
 
-        <TextView
-            android:id="@+id/Name"
+        <ImageView
+            android:id="@+id/imageView1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            
-            android:text="Medium Text"
-            android:textAppearance="?android:attr/textAppearanceMedium" 
-            android:padding="10dp"/>
+            android:layout_marginTop="5dp"
+            android:src="@drawable/books" />
 
-        <TextView
-            android:id="@+id/Price"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            
-            android:text="Small Text"
-            android:textAppearance="?android:attr/textAppearanceSmall" 
-            android:padding="10dp"/>
+            android:layout_marginTop="5dp"
+            android:orientation="vertical" >
+
+            <TextView
+                android:id="@+id/Name"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="3dp"
+                android:layout_weight=".99"
+                android:text="Skriptenname"
+                android:textAppearance="?android:attr/textAppearanceMedium" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="3dp"
+                android:layout_marginTop="2dp"
+                android:layout_weight=".99" >
+
+                <TextView
+                    android:id="@+id/Price"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="5dp"
+                    android:text="Preis: 0.0 €"
+                    android:textAppearance="?android:attr/textAppearanceSmall" />
+
+                <TextView
+                    android:id="@+id/Stock"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Verfügbar: 40 Stück"
+                    android:textAppearance="?android:attr/textAppearanceSmall" />
+            </LinearLayout>
+        </LinearLayout>
 
     </LinearLayout>
 
@@ -34,9 +62,8 @@
         android:id="@+id/checkBox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="right"
+        android:layout_gravity="right"
+        android:layout_weight="0.01"
+        android:gravity="right" />
         
-        android:padding="10dp"
-         />
-
-</LinearLayout>
+</TableRow>
