--- a/res/layout/activity_rss_reader.xml
+++ b/res/layout/activity_rss_reader.xml
@@ -9,7 +9,7 @@
    tools:context=".MainActivity" >
 
    <TextView
-      android:id="@+id/textView1"
+      android:id="@+id/textViewAuswahl"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignParentTop="true"
@@ -22,9 +22,9 @@
       android:id="@+id/textView2"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:layout_below="@+id/textView1"
+      android:layout_below="@+id/textViewAuswahl"
       android:layout_marginTop="48dp"
-      android:layout_toLeftOf="@+id/textView1"
+      android:layout_toLeftOf="@+id/textViewAuswahl"
       android:text="@string/title" />
 
    <TextView
@@ -66,7 +66,7 @@
       android:ems="10" />
 
    <Button
-      android:id="@+id/button1"
+      android:id="@+id/buttonReorder"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_below="@+id/editText3"
